get author,publisher,books
